<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--tools:context=".NavigationView">-->


    <group android:checkableBehavior="single">

        <item android:id="@+id/menu_settings"
        android:title="@string/travel"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:onClick="information_about"
        android:icon="@drawable/sleepingbag" />

    <item android:id="@+id/menu_about"
        android:title="@string/evolution"
        android:orderInCategory="1"
        app:showAsAction="always"

        android:icon="@drawable/rucksack48" />
    <item android:id="@+id/menu_purposes"
        android:title="@string/perpose"
        android:orderInCategory="3"
        app:showAsAction="always"
        android:icon="@drawable/smallaxe48"
        />
    <item android:id="@+id/menu_travel"
        android:title="@string/try_all"
        android:orderInCategory="2"
        app:showAsAction="always"
        android:icon="@drawable/campfire48"
        />
    <item android:id="@+id/menu_add_notification"
        android:title="@string/sens_of_life"
        android:icon="@drawable/campingtent48"
        android:orderInCategory="0"
        app:showAsAction="never"
        />
    <item android:id="@+id/menu_navigationview"
        android:title="@string/love"
        android:orderInCategory="1"
        app:showAsAction="never"

        android:icon="@drawable/bicycle48"/>
    </group>



</menu>
